# apps/server/Server.Application/Abstractions/Repositories/IPositionRepository.cs
@@ -7,5 +7,6 @@ namespace Server.Application.Abstractions.Repositories
         Task UpdateAsync(Position position, CancellationToken cancellationToken);
         Task<Position?> GetByIdAsync(Guid id, CancellationToken cancellationToken);
         Task<List<Position>> GetAllAsync(CancellationToken cancellationToken);
+        Task<List<Position>> GetAllByBatchIdAsync(Guid batchId, CancellationToken cancellationToken);
     }
 }
